--- a/index.html
+++ b/index.html
@@ -49,25 +49,8 @@
                     </div>
                     <nav class="mil-main-menu">
                         <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-                            <li class="mil-has-children mil-current">
+                            <li class="mil-current">
                                 <a href="">Home</a>
-                                <ul>
-                                    <li>
-                                        <a href="home-1.html">Home type 1</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-2.html">Home type 2</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-3.html">Home type 3</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-4.html">Home type 4</a>
-                                    </li>
-                                    <li>
-                                        <a href="home-5.html">Home type 5</a>
-                                    </li>
-                                </ul>
                             </li>
                             <li class="mil-has-children">
                                 <a href="">Services</a>
