--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <!-- static content -->
         <div class="mil-preloader-frame">
             <div class="mil-preloader-content">
-                <img src="images/logo.png" alt="logo">
+                <img src="images/proClean.png" alt="logo">
                 <div class="mil-preloader">
                     <div class="mil-preload-line"></div>
                 </div>
@@ -42,8 +42,8 @@
             <div class="container">
                 <div class="mil-tp-content">
                     <div class="mil-left">
-                        <a href="#top" class="mil-logo mil-hover-bri-105" style="width: 16rem">
-                            <img src="images/logo.png" alt="logo">
+                        <a href="#top" class="mil-logo mil-hover-bri-105" style="width: 16rem; height: auto;">
+                            <img src="images/proClean.png" alt="logo" style="height: fit-content;">
                             <img src="images/proClean.png" alt="logo" class="mil-light">
                         </a>
                     </div>
@@ -263,7 +263,6 @@
                             <div class="col-lg-5 col-xxl-3 mil-mb-15">
                                 <div class="mil-hero-reviews-card mil-bg-m-4 mil-br-md">
                                     <h3 class="mil-fs-32 mil-mb-30">Clean spaces, <br>happy faces</h3>
-                                    <a href="#reviews" class="mil-link mil-m-1">read reviews<i class="far fa-arrow-right mil-bg-a-1 mil-m-1" style="padding: .2rem 0 0 .2rem"></i></a>
                                 </div>
                             </div>
                             <div class="col-lg-12 col-xxl-5 mil-mb-15">
@@ -404,7 +403,6 @@
                             <a href="service-1.html" class="mil-service-card mil-bg-m-4 mil-br-md">
                                 <div class="mil-jcb">
                                     <img src="images/1.png" alt="icon" class="mil-card-icon mil-mb-30">
-                                    <span class="mil-up-text mil-m-1">from $59</span>
                                 </div>
                                 <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">Window cleaning</h3>
                                 <div>
@@ -415,22 +413,9 @@
                         <div class="col-sm-6 col-md-4 col-xl-3 mil-mb-15 mil-up">
                             <a href="service-1.html" class="mil-service-card mil-bg-m-4 mil-br-md">
                                 <div class="mil-jcb">
-                                    <img src="images/2.png" alt="icon" class="mil-card-icon mil-mb-30">
-                                    <span class="mil-up-text mil-m-1">from $29</span>
-                                </div>
-                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">Dry cleaning</h3>
-                                <div>
-                                    <div class="mil-btn mil-sm mil-bg-m-3 mil-br-xl mil-hover-bri-105 mil-hover-scale">Learn more</div>
-                                </div>
-                            </a>
-                        </div>
-                        <div class="col-sm-6 col-md-4 col-xl-3 mil-mb-15 mil-up">
-                            <a href="service-1.html" class="mil-service-card mil-bg-m-4 mil-br-md">
-                                <div class="mil-jcb">
                                     <img src="images/3.png" alt="icon" class="mil-card-icon mil-mb-30">
-                                    <span class="mil-up-text mil-m-1">from $219</span>
                                 </div>
-                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">Post-construction</h3>
+                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">Gardening Services</h3>
                                 <div>
                                     <div class="mil-btn mil-sm mil-bg-m-3 mil-br-xl mil-hover-bri-105 mil-hover-scale">Learn more</div>
                                 </div>
@@ -440,7 +425,6 @@
                             <a href="service-1.html" class="mil-service-card mil-bg-m-4 mil-br-md">
                                 <div class="mil-jcb">
                                     <img src="images/4.png" alt="icon" class="mil-card-icon mil-mb-30">
-                                    <span class="mil-up-text mil-m-1">from $99</span>
                                 </div>
                                 <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">Pools cleaning</h3>
                                 <div>
@@ -452,9 +436,8 @@
                             <a href="service-1.html" class="mil-service-card mil-bg-m-4 mil-br-md">
                                 <div class="mil-jcb">
                                     <img src="images/5.png" alt="icon" class="mil-card-icon mil-mb-30">
-                                    <span class="mil-up-text mil-m-1">from $68</span>
                                 </div>
-                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">landscaping</h3>
+                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">Industrial Cleaning</h3>
                                 <div>
                                     <div class="mil-btn mil-sm mil-bg-m-3 mil-br-xl mil-hover-bri-105 mil-hover-scale">Learn more</div>
                                 </div>
@@ -464,9 +447,8 @@
                             <a href="service-1.html" class="mil-service-card mil-bg-m-4 mil-br-md">
                                 <div class="mil-jcb">
                                     <img src="images/6.png" alt="icon" class="mil-card-icon mil-mb-30">
-                                    <span class="mil-up-text mil-m-1">from $1299</span>
                                 </div>
-                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">Cosmetic repairs</h3>
+                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">CareHome Cleaning</h3>
                                 <div>
                                     <div class="mil-btn mil-sm mil-bg-m-3 mil-br-xl mil-hover-bri-105 mil-hover-scale">Learn more</div>
                                 </div>
@@ -476,9 +458,8 @@
                             <a href="service-1.html" class="mil-service-card mil-bg-m-4 mil-br-md">
                                 <div class="mil-jcb">
                                     <img src="images/7.png" alt="icon" class="mil-card-icon mil-mb-30">
-                                    <span class="mil-up-text mil-m-1">from $3 🙂</span>
                                 </div>
-                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">By agreement</h3>
+                                <h3 class="mil-fs-30 mil-mb-20 mil-lh-110 mil-mb-30">Gutter Cleaning</h3>
                                 <div>
                                     <div class="mil-btn mil-sm mil-bg-m-3 mil-br-xl mil-hover-bri-105 mil-hover-scale">Learn more</div>
                                 </div>
@@ -515,8 +496,8 @@
                                         <li><img src="images/4.jpg" alt="User"></li>
                                     </ul>
                                     <div>
-                                        <div class="mil-fs-72 mil-fw-600 mil-m-3 mil-mb-20"><span class="mil-counter" data-number="2740">2740</span><span class="mil-a-1">+</span></div>
-                                        <p class="mil-fs-20 mil-m-3 mil-opacity-4">Satisfied customers a year, <br>and this is just the beginning </p>
+                                        <div class="mil-fs-72 mil-fw-600 mil-m-3 mil-mb-20"></div>
+                                        <p class="mil-fs-20 mil-m-3 mil-opacity-4">Satisfies every customer  <br>and this is just the beginning </p>
                                     </div>
                                 </div>
                             </div>
@@ -529,11 +510,10 @@
                         <div class="col-md-6 col-xl-4 mil-mb-15 mil-up">
                             <div class="mil-about-box mil-br-md mil-bg-a-2">
                                 <div class="mil-box-content mil-column mil-jcb">
-                                    <p class="mil-fs-38 mil-fw-600 mil-m-4"><span class="mil-counter" data-number="12">12</span> years of <br>experience in <br>cleaning.</p>
+                                    <p class="mil-fs-38 mil-fw-600 mil-m-4"><span class="mil-counter"></span> Years of <br>experience in <br>cleaning.</p>
                                     <div>
-                                        <p class="mil-fs-20 mil-m-3 mil-opacity-7">As many as 12 years of reliability and professionalism</p>
+                                        <p class="mil-fs-20 mil-m-3 mil-opacity-7">Years of reliability and professionalism</p>
                                     </div>
-                                    <div class="mil-bg-number mil-scale-img" data-value-1="1.2" data-value-2="1">12</div>
                                 </div>
                             </div>
                         </div>
@@ -579,7 +559,7 @@
                                     <div class="swiper-slide">
                                         <div class="mil-review-frame mil-tac" data-swiper-parallax="-600" data-swiper-parallax-opacity="0" data-swiper-parallax-scale=".6">
                                             <h5 class="mil-fs-28 mil-m-1 mil-up mil-mb-15">Sarah Newman</h5>
-                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40">Envato market</p>
+                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40"></p>
                                             <div class="mil-fs-72 mil-a-2 mil-lh-100 mil-up" style="transform: translateX(-1rem)"><i>"</i></div>
                                             <p class="mil-fs-22 mil-m-1 mil-lh-200 mil-up">I’ve been using Proclean and Green for my home cleaning needs for over six months now, and I couldn’t be more satisfied. Their team is always punctual, professional, and friendly. The attention to detail is fantastic, and my apartment has never looked better. I especially love how fresh and organized everything feels after they’re done. I highly recommend Proclean and Green for anyone looking for reliable cleaning services!</p>
                                         </div>
@@ -587,7 +567,7 @@
                                     <div class="swiper-slide">
                                         <div class="mil-review-frame mil-tac" data-swiper-parallax="-600" data-swiper-parallax-opacity="0" data-swiper-parallax-scale=".6">
                                             <h5 class="mil-fs-28 mil-m-1 mil-up mil-mb-15">Emma Trueman</h5>
-                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40">Envato market</p>
+                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40"></p>
                                             <div class="mil-fs-72 mil-a-2 mil-lh-100 mil-up" style="transform: translateX(-1rem)"><i>"</i></div>
                                             <p class="mil-fs-22 mil-m-1 mil-lh-200 mil-up">Proclean and Green provided an exceptional deep cleaning service for my office. The cleaners were thorough and left no corner untouched. It’s refreshing to see such dedication to their work, and they used high-quality, eco-friendly products, which was a big plus for us. Our office now looks spotless, and we will definitely be using Proclean and Green on a regular basis!</p>
                                         </div>
@@ -595,7 +575,7 @@
                                     <div class="swiper-slide">
                                         <div class="mil-review-frame mil-tac" data-swiper-parallax="-600" data-swiper-parallax-opacity="0" data-swiper-parallax-scale=".6">
                                             <h5 class="mil-fs-28 mil-m-1 mil-up mil-mb-15">Paul Oldman</h5>
-                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40">Envato market</p>
+                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40"></p>
                                             <div class="mil-fs-72 mil-a-2 mil-lh-100 mil-up" style="transform: translateX(-1rem)"><i>"</i></div>
                                             <p class="mil-fs-22 mil-m-1 mil-lh-200 mil-up">I hired Proclean and Green to clean my house before hosting a big family gathering, and they exceeded all my expectations. The kitchen, bathrooms, and living areas were sparkling clean, and they even took care of some tough stains I thought would never go away. The team was efficient and friendly, making the whole experience stress-free. Highly recommend!</p>
                                         </div>
@@ -603,7 +583,7 @@
                                     <div class="swiper-slide">
                                         <div class="mil-review-frame mil-tac" data-swiper-parallax="-600" data-swiper-parallax-opacity="0" data-swiper-parallax-scale=".6">
                                             <h5 class="mil-fs-28 mil-m-1 mil-up mil-mb-15">Ashley freeman</h5>
-                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40">Envato market</p>
+                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40"></p>
                                             <div class="mil-fs-72 mil-a-2 mil-lh-100 mil-up" style="transform: translateX(-1rem)"><i>"</i></div>
                                             <p class="mil-fs-22 mil-m-1 mil-lh-200 mil-up">Proclean and Green is hands down the best cleaning company I’ve ever used! They’re incredibly professional and easy to work with. The staff goes above and beyond to make sure every inch of my home is perfectly clean. Their flexible scheduling is a lifesaver, and the results speak for themselves – my house has never felt so clean and fresh. I’m so happy I found them!"</p>
                                         </div>
@@ -611,7 +591,7 @@
                                     <div class="swiper-slide">
                                         <div class="mil-review-frame mil-tac" data-swiper-parallax="-600" data-swiper-parallax-opacity="0" data-swiper-parallax-scale=".6">
                                             <h5 class="mil-fs-28 mil-m-1 mil-up mil-mb-15">Andrew Oldman</h5>
-                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40">Envato market</p>
+                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40"></p>
                                             <div class="mil-fs-72 mil-a-2 mil-lh-100 mil-up" style="transform: translateX(-1rem)"><i>"</i></div>
                                             <p class="mil-fs-22 mil-m-1 mil-lh-200 mil-up">I’ve been using Proclean and Green for my home cleaning needs for over six months now, and I couldn’t be more satisfied. Their team is always punctual, professional, and friendly. The attention to detail is fantastic, and my apartment has never looked better. I especially love how fresh and organized everything feels after they’re done. I highly recommend Proclean and Green for anyone looking for reliable cleaning services!</p>
                                         </div>
@@ -619,7 +599,7 @@
                                     <div class="swiper-slide">
                                         <div class="mil-review-frame mil-tac" data-swiper-parallax="-600" data-swiper-parallax-opacity="0" data-swiper-parallax-scale=".6">
                                             <h5 class="mil-fs-28 mil-m-1 mil-up mil-mb-15">Oscar Trueman</h5>
-                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40">Envato market</p>
+                                            <p class="mil-m-1 mil-up-text mil-up mil-mb-40"></p>
                                             <div class="mil-fs-72 mil-a-2 mil-lh-100 mil-up" style="transform: translateX(-1rem)"><i>"</i></div>
                                             <p class="mil-fs-22 mil-m-1 mil-lh-200 mil-up">Proclean and Green provided an exceptional deep cleaning service for my office. The cleaners were thorough and left no corner untouched. It’s refreshing to see such dedication to their work, and they used high-quality, eco-friendly products, which was a big plus for us. Our office now looks spotless, and we will definitely be using Proclean and Green on a regular basis!</p>
                                         </div>
