--- a/index.html
+++ b/index.html
@@ -50,27 +50,10 @@
                     <nav class="mil-main-menu">
                         <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
                             <li class="mil-current">
-                                <a href="">Home</a>
+                                <a href="index.html">Home</a>
                             </li>
-                            <li class="mil-has-children">
-                                <a href="">Services</a>
-                                <ul>
-                                    <li>
-                                        <a href="services.html">Services</a>
-                                    </li>
-                                    <li>
-                                        <a href="service-1.html">Single service type 1</a>
-                                    </li>
-                                    <li>
-                                        <a href="service-2.html">Single service type 2</a>
-                                    </li>
-                                    <li>
-                                        <a href="subscription.html">Subscription</a>
-                                    </li>
-                                    <li>
-                                        <a href="calculator.html">Price Calculator</a>
-                                    </li>
-                                </ul>
+                            <li>
+                                <a href="service.html">Services</a>
                             </li>
                             <li>
                                 <a href="contact.html">Contact</a>
