--- a/service.html
+++ b/service.html
@@ -53,62 +53,17 @@
             </div>
             <nav class="mil-main-menu">
               <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-                <li class="mil-has-children">
-                  <a href="">Home</a>
-                  <ul>
-                    <li>
-                      <a href="home-1.html">Home type 1</a>
-                    </li>
-                    <li>
-                      <a href="home-2.html">Home type 2</a>
-                    </li>
-                    <li>
-                      <a href="home-3.html">Home type 3</a>
-                    </li>
-                    <li>
-                      <a href="home-4.html">Home type 4</a>
-                    </li>
-                    <li>
-                      <a href="home-5.html">Home type 5</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="mil-has-children mil-current">
-                  <a href="">Services</a>
-                  <ul>
-                    <li>
-                      <a href="services.html">Services</a>
-                    </li>
-                    <li>
-                      <a href="service-1.html">Single service type 1</a>
-                    </li>
-                    <li>
-                      <a href="service-2.html">Single service type 2</a>
-                    </li>
-                    <li>
-                      <a href="subscription.html">Subscription</a>
-                    </li>
-                    <li>
-                      <a href="calculator.html">Price Calculator</a>
-                    </li>
-                  </ul>
-                </li>
-                <li class="mil-has-children">
-                  <a href="">Blog</a>
-                  <ul>
-                    <li>
-                      <a href="blog.html">Blog list</a>
-                    </li>
-                    <li>
-                      <a href="publication.html">Publication</a>
-                    </li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="contact.html">Contact</a>
-                </li>
+                  <li class="mil-current">
+                      <a href="index.html">Home</a>
+                  </li>
+                  <li>
+                      <a href="service.html">Services</a>
+                  </li>
+                  <li>
+                      <a href="contact.html">Contact</a>
+                  </li>
               </ul>
-            </nav>
+          </nav>
             <div class="mil-right mil-jce">
               <div class="mil-tp-phone mil-aic mil-mr-60 mil-sm-mr-15">
                 <i
@@ -496,7 +451,7 @@
         <div id="scroll">
           <div class="container">
             <div class="mil-section-title mil-mb-f mil-up">
-              <h2 class="mil-fs-36">Why choos us</h2>
+              <h2 class="mil-fs-36">Why choose us</h2>
               <div class="mil-dots"></div>
               <b class="mil-fs-24">01</b>
             </div>
