updated image issue still on

--- a/contact.html
+++ b/contact.html
@@ -53,25 +53,25 @@
             </div>
             <nav class="mil-main-menu">
               <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-                  <li class="mil-current">
-                      <a href="index.html">Home</a>
-                  </li>
-                  <li>
-                      <a href="service.html">Services</a>
-                  </li>
-                  <li>
-                      <a href="contact.html">Contact</a>
-                  </li>
+                <li class="mil-current">
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="service.html">Services</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact</a>
+                </li>
               </ul>
-          </nav>
+            </nav>
             <div class="mil-right mil-jce">
               <div class="mil-tp-phone mil-aic mil-mr-60 mil-sm-mr-15">
                 <i
                   class="far fa-mobile mil-icon mil-sm mil-bg-a-2 mil-m-4 mil-mr-15 mil-sm-hidden"
                   style="padding-top: 0.2rem"
                 ></i>
-                <a href="tel:+380123456789" class="mil-fw-600" data-no-swup
-                  >+1 (049) 129-45X7</a
+                <a href="tel:+61405805552" class="mil-fw-600" data-no-swup
+                  >+61 (405) 805-552</a
                 >
               </div>
               <a
@@ -113,7 +113,7 @@
                       id="user-phone-2"
                       name="user-tel"
                       class="mil-phone-input mil-br-md mil-bg-m-3"
-                      placeholder="+38 (___) ___-__-__"
+                      placeholder="+61 (___) ___-__-__"
                       autocomplete="tel"
                     />
                     <i class="far fa-mobile mil-a-2"></i>
@@ -275,7 +275,7 @@
                       id="user-phone-3"
                       name="user-tel"
                       class="mil-phone-input mil-br-md mil-bg-m-3"
-                      placeholder="+38 (___) ___-__-__"
+                      placeholder="+61 (___) ___-__-__"
                       autocomplete="tel"
                     />
                     <i class="far fa-mobile mil-a-2"></i>
@@ -498,7 +498,7 @@
                             id="user-phone"
                             name="user-tel"
                             class="mil-phone-input mil-br-md mil-bg-m-3"
-                            placeholder="+38 (___) ___-__-__"
+                            placeholder="+61 (___) ___-__-__"
                             autocomplete="tel"
                           />
                           <i class="far fa-mobile mil-a-2"></i>
@@ -624,7 +624,9 @@
                     class="mil-card-icon mil-mb-30"
                   />
                   <h3 class="mil-fs-30 mil-mb-20 mil-lh-110">Write</h3>
-                  <p class="mil-fs-18 mil-mb-5">Proclean and Green.mailbox@mail.com</p>
+                  <p class="mil-fs-18 mil-mb-5">
+                    Proclean and Green.mailbox@mail.com
+                  </p>
                   <p class="mil-fs-18">Proclean and Green.ofice@mail.com</p>
                 </div>
                 <div class="col-lg-4 mil-tac mil-mb-60">
@@ -882,12 +884,12 @@
               data-value-2="1.3"
               autoplay="autoplay"
               loop="loop"
-              muted
-              playsinline
+              muted=""
+              playsinline=""
               oncontextmenu="return false;"
               preload="auto"
             >
-              <source src="images/footer.mp4" />
+              <source src="media/footer.mp4" />
             </video>
           </div>
           <div class="mil-footer-content">
@@ -902,26 +904,11 @@
                         style="width: 16rem"
                       >
                         <img
-                          src="images/logo-light.png"
+                          src="images/proClean.png"
                           alt="logo"
                           class="mil-light"
                         />
                       </a>
-                      <p class="mil-mb-30 mil-fs-18 mil-up">
-                        Subscribe our newsletter
-                      </p>
-                      <form class="mil-subscribe mil-up">
-                        <input
-                          type="email"
-                          class="mil-bg-m-1 mil-br-xl"
-                          placeholder="Your email"
-                          id="subscribe"
-                          name="subscribe"
-                        />
-                        <button type="submit" class="mil-bg-a-1">
-                          <i class="far fa-arrow-right"></i>
-                        </button>
-                      </form>
                     </div>
                   </div>
                 </div>
@@ -943,11 +930,6 @@
                           class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
                         >
                           <a href="calculator.html">Calculate price</a>
-                        </li>
-                        <li
-                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
-                        >
-                          <a href="blog.html">Blog</a>
                         </li>
                         <li
                           class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
@@ -988,7 +970,7 @@
                       <a
                         href="#."
                         target="_blank"
-                        data-no-swup
+                        data-no-swup=""
                         class="mil-hover-a-1"
                       >
                         <i class="fab fa-instagram"></i>
@@ -998,7 +980,7 @@
                       <a
                         href="#."
                         target="_blank"
-                        data-no-swup
+                        data-no-swup=""
                         class="mil-hover-a-1"
                       >
                         <i class="fab fa-facebook-f"></i>
@@ -1008,7 +990,7 @@
                       <a
                         href="#."
                         target="_blank"
-                        data-no-swup
+                        data-no-swup=""
                         class="mil-hover-a-1"
                       >
                         <i class="fab fa-youtube"></i>
@@ -1018,7 +1000,7 @@
                       <a
                         href="#."
                         target="_blank"
-                        data-no-swup
+                        data-no-swup=""
                         class="mil-hover-a-1"
                       >
                         <i class="fab fa-pinterest-p"></i>
@@ -1027,13 +1009,7 @@
                   </ul>
                   <ul class="mil-aic mil-up">
                     <li class="mil-hover-m-4 mil-mr-20">
-                      <a href="services.html">Privacy Policy</a>
-                    </li>
-                    <li class="mil-hover-m-4 mil-mr-20">
-                      <a href="services.html">Terms and conditions</a>
-                    </li>
-                    <li class="mil-hover-m-4 mil-mr-20">
-                      <a href="services.html">Cookie Policy</a>
+                      <a href="contact.html">Cookie Policy</a>
                     </li>
                   </ul>
                 </div>
@@ -1041,38 +1017,25 @@
                   <div class="row mil-jcb">
                     <div class="col-6 mil-up">
                       <h5 class="mil-fs-22 mil-fw-600 mil-m-3 mil-mb-20">
-                        Springfield
+                        50 Pasanda Rd,
                       </h5>
-                      <p class="mil-mb-20">
-                        71 South Los Carneros Road, <br />Goleta, California
-                        93117
-                      </p>
-                      <p class="mil-up-text mil-a-1">+1-877-926-5184</p>
-                    </div>
-                    <div class="col-6 mil-up">
-                      <h5 class="mil-fs-22 mil-fw-600 mil-m-3 mil-mb-20">
-                        Greenville
-                      </h5>
-                      <p class="mil-mb-20">
-                        71 South Los Carneros Road, <br />Goleta, California
-                        93117
-                      </p>
-                      <p class="mil-up-text mil-a-1">+31 174 705 811</p>
+                      <p class="mil-mb-20">Munno Para West, <br />SA 5115</p>
+                      <p class="mil-up-text mil-a-1">+61 (405) 805-552</p>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="mil-dots mil-up"></div>
               <div class="mil-footer-bottom mil-aic mil-jcb mil-up">
-                <p>© Copyright 2023 - Mil. All Rights Reserved.</p>
+                <p>© Copyright 2025 - All Rights Reserved.</p>
                 <p>
                   Author:
                   <a
-                    href="https://themeforest.net/user/millerdigitaldesign/portfolio"
+                    href=""
                     target="_blank"
-                    data-no-swup
+                    data-no-swup=""
                     class="mil-text-link mil-a-1"
-                    >Nazar Miller</a
+                    >Dearie-de-cybek</a
                   >
                 </p>
               </div>
