--- a/service.html
+++ b/service.html
@@ -53,25 +53,25 @@
             </div>
             <nav class="mil-main-menu">
               <ul id="swupMenu" class="mil-menu-transition mil-aic mil-m-4">
-                  <li class="mil-current">
-                      <a href="index.html">Home</a>
-                  </li>
-                  <li>
-                      <a href="service.html">Services</a>
-                  </li>
-                  <li>
-                      <a href="contact.html">Contact</a>
-                  </li>
+                <li class="mil-current">
+                  <a href="index.html">Home</a>
+                </li>
+                <li>
+                  <a href="service.html">Services</a>
+                </li>
+                <li>
+                  <a href="contact.html">Contact</a>
+                </li>
               </ul>
-          </nav>
+            </nav>
             <div class="mil-right mil-jce">
               <div class="mil-tp-phone mil-aic mil-mr-60 mil-sm-mr-15">
                 <i
                   class="far fa-mobile mil-icon mil-sm mil-bg-a-2 mil-m-4 mil-mr-15 mil-sm-hidden"
                   style="padding-top: 0.2rem"
                 ></i>
-                <a href="tel:+380123456789" class="mil-fw-600" data-no-swup
-                  >+1 (049) 129-45X7</a
+                <a href="tel:+61405805552" class="mil-fw-600" data-no-swup
+                  >+61 (405) 805-552</a
                 >
               </div>
               <a
@@ -113,7 +113,7 @@
                       id="user-phone-2"
                       name="user-tel"
                       class="mil-phone-input mil-br-md mil-bg-m-3"
-                      placeholder="+38 (___) ___-__-__"
+                      placeholder="+61 (___) ___-__-__"
                       autocomplete="tel"
                     />
                     <i class="far fa-mobile mil-a-2"></i>
@@ -275,7 +275,7 @@
                       id="user-phone-3"
                       name="user-tel"
                       class="mil-phone-input mil-br-md mil-bg-m-3"
-                      placeholder="+38 (___) ___-__-__"
+                      placeholder="+61 (___) ___-__-__"
                       autocomplete="tel"
                     />
                     <i class="far fa-mobile mil-a-2"></i>
@@ -361,7 +361,7 @@
                           />
                         </svg>
                         <h1 class="mil-fs-100 mil-sm-fs-72 mil-lh-110">
-                          Apartment
+                          Service
                         </h1>
                       </div>
                     </div>
@@ -399,7 +399,6 @@
                 <ul class="mil-breadcrumbs mil-mb-60">
                   <li><a href="home-1.html">Home</a></li>
                   <li><a href="services.html">Services</a></li>
-                  <li><a href="service-1.html">Apartment Cleaning</a></li>
                 </ul>
                 <div class="mil-circle-text-position">
                   <div
@@ -1548,12 +1547,12 @@
               data-value-2="1.3"
               autoplay="autoplay"
               loop="loop"
-              muted
-              playsinline
+              muted=""
+              playsinline=""
               oncontextmenu="return false;"
               preload="auto"
             >
-              <source src="images/footer.mp4" />
+              <source src="media/footer.mp4" />
             </video>
           </div>
           <div class="mil-footer-content">
@@ -1568,26 +1567,11 @@
                         style="width: 16rem"
                       >
                         <img
-                          src="images/logo-light.png"
+                          src="images/proClean.png"
                           alt="logo"
                           class="mil-light"
                         />
                       </a>
-                      <p class="mil-mb-30 mil-fs-18 mil-up">
-                        Subscribe our newsletter
-                      </p>
-                      <form class="mil-subscribe mil-up">
-                        <input
-                          type="email"
-                          class="mil-bg-m-1 mil-br-xl"
-                          placeholder="Your email"
-                          id="subscribe"
-                          name="subscribe"
-                        />
-                        <button type="submit" class="mil-bg-a-1">
-                          <i class="far fa-arrow-right"></i>
-                        </button>
-                      </form>
                     </div>
                   </div>
                 </div>
@@ -1613,11 +1597,6 @@
                         <li
                           class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
                         >
-                          <a href="blog.html">Blog</a>
-                        </li>
-                        <li
-                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
-                        >
                           <a href="contact.html">Contact</a>
                         </li>
                       </ul>
@@ -1628,13 +1607,13 @@
                           <a href="service-1.html">Apartment</a>
                         </li>
                         <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
-                          <a href="service-1.html">Home</a>
+                          <a href="service-2.html">Home</a>
                         </li>
                         <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
                           <a href="service-1.html">Office</a>
                         </li>
                         <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
-                          <a href="service-1.html">Windows</a>
+                          <a href="service-2.html">Windows</a>
                         </li>
                         <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
                           <a href="service-1.html">Pool</a>
@@ -1654,7 +1633,7 @@
                       <a
                         href="#."
                         target="_blank"
-                        data-no-swup
+                        data-no-swup=""
                         class="mil-hover-a-1"
                       >
                         <i class="fab fa-instagram"></i>
@@ -1664,7 +1643,7 @@
                       <a
                         href="#."
                         target="_blank"
-                        data-no-swup
+                        data-no-swup=""
                         class="mil-hover-a-1"
                       >
                         <i class="fab fa-facebook-f"></i>
@@ -1674,7 +1653,7 @@
                       <a
                         href="#."
                         target="_blank"
-                        data-no-swup
+                        data-no-swup=""
                         class="mil-hover-a-1"
                       >
                         <i class="fab fa-youtube"></i>
@@ -1684,7 +1663,7 @@
                       <a
                         href="#."
                         target="_blank"
-                        data-no-swup
+                        data-no-swup=""
                         class="mil-hover-a-1"
                       >
                         <i class="fab fa-pinterest-p"></i>
@@ -1692,12 +1671,6 @@
                     </li>
                   </ul>
                   <ul class="mil-aic mil-up">
-                    <li class="mil-hover-m-4 mil-mr-20">
-                      <a href="contact.html">Privacy Policy</a>
-                    </li>
-                    <li class="mil-hover-m-4 mil-mr-20">
-                      <a href="contact.html">Terms and conditions</a>
-                    </li>
                     <li class="mil-hover-m-4 mil-mr-20">
                       <a href="contact.html">Cookie Policy</a>
                     </li>
@@ -1707,38 +1680,25 @@
                   <div class="row mil-jcb">
                     <div class="col-6 mil-up">
                       <h5 class="mil-fs-22 mil-fw-600 mil-m-3 mil-mb-20">
-                        Springfield
+                        50 Pasanda Rd,
                       </h5>
-                      <p class="mil-mb-20">
-                        71 South Los Carneros Road, <br />Goleta, California
-                        93117
-                      </p>
-                      <p class="mil-up-text mil-a-1">+1-877-926-5184</p>
-                    </div>
-                    <div class="col-6 mil-up">
-                      <h5 class="mil-fs-22 mil-fw-600 mil-m-3 mil-mb-20">
-                        Greenville
-                      </h5>
-                      <p class="mil-mb-20">
-                        71 South Los Carneros Road, <br />Goleta, California
-                        93117
-                      </p>
-                      <p class="mil-up-text mil-a-1">+31 174 705 811</p>
+                      <p class="mil-mb-20">Munno Para West, <br />SA 5115</p>
+                      <p class="mil-up-text mil-a-1">+61 (405) 805-552</p>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="mil-dots mil-up"></div>
               <div class="mil-footer-bottom mil-aic mil-jcb mil-up">
-                <p>© Copyright 2023 - Mil. All Rights Reserved.</p>
+                <p>© Copyright 2025 - All Rights Reserved.</p>
                 <p>
                   Author:
                   <a
-                    href="https://themeforest.net/user/millerdigitaldesign/portfolio"
+                    href=""
                     target="_blank"
-                    data-no-swup
+                    data-no-swup=""
                     class="mil-text-link mil-a-1"
-                    >Nazar Miller</a
+                    >Dearie-de-cybek</a
                   >
                 </p>
               </div>
