--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- chome mobile panel color -->
     <meta name="theme-color" content="#EDCE29" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
@@ -214,10 +214,6 @@
                                             <rect x="22.8125" y="67.2046" width="3.46874" height="62.7841" transform="rotate(-135 22.8125 67.2046)" fill="#F6D62D"></rect>
                                         </svg>
                                     </div>
-                                    <div class="mil-buttons-frame">
-                                        <a href="services.html" class="mil-btn mil-icon-btn mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-hover-scale">Learn more<i class="far fa-plus mil-bg-m-4 mil-m-1"></i></a>
-                                        <a href="calculator.html" class="mil-link mil-m-1 mil-reverse">Price Calculator<i class="far fa-calculator mil-bg-a-2 mil-m-4" style="padding: .2rem 0 0 .2rem"></i></a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -286,7 +282,7 @@
             <div class="row">
               <div class="col-md-6 mil-mb-15 mil-up">
                 <a
-                  href="service-2.html"
+                  href="service.html"
                   class="mil-service-card mil-bg-m-4 mil-br-md"
                 >
                   <div class="row">
@@ -316,7 +312,7 @@
               </div>
               <div class="col-md-6 mil-mb-15 mil-up">
                 <a
-                  href="service-2.html"
+                  href="service.html"
                   class="mil-service-card mil-bg-m-4 mil-br-md"
                 >
                   <div class="row">
@@ -346,7 +342,7 @@
               </div>
               <div class="col-md-6 mil-mb-15 mil-up">
                 <a
-                  href="service-2.html"
+                  href="service.html"
                   class="mil-service-card mil-bg-m-4 mil-br-md"
                 >
                   <div class="row">
@@ -376,7 +372,7 @@
               </div>
               <div class="col-md-6 mil-mb-15 mil-up">
                 <a
-                  href="service-2.html"
+                  href="service.html"
                   class="mil-service-card mil-bg-m-4 mil-br-md"
                 >
                   <div class="row">
@@ -1092,19 +1088,18 @@
                                 <div class="row">
                                     <div class="col-6">
                                         <ul>
-                                            <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="home-2.html">Home</a></li>
+                                            <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="index.html">Home</a></li>
                                             <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="services.html">Services</a></li>
-                                            <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="calculator.html">Calculate price</a></li>
                                             <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-6">
                                         <ul>
-                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service-1.html">Apartment</a></li>
-                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service-2.html">Home</a></li>
-                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service-1.html">Office</a></li>
-                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service-2.html">Windows</a></li>
-                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service-1.html">Pool</a></li>
+                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Industrial Cleaning</a></li>
+                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Home</a></li>
+                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Office</a></li>
+                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Windows</a></li>
+                                            <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Gutter Cleaning</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -1124,20 +1119,10 @@
                                             <i class="fab fa-facebook-f"></i>
                                         </a>
                                     </li>
-                                    <li class="mil-mr-20 mil-fs-20 mil-m-3">
-                                        <a href="#." target="_blank" data-no-swup="" class="mil-hover-a-1">
-                                            <i class="fab fa-youtube"></i>
-                                        </a>
-                                    </li>
-                                    <li class="mil-fs-20 mil-m-3">
-                                        <a href="#." target="_blank" data-no-swup="" class="mil-hover-a-1">
-                                            <i class="fab fa-pinterest-p"></i>
-                                        </a>
-                                    </li>
                                 </ul>
                                 <ul class="mil-aic mil-up">
                                     <li class="mil-hover-m-4 mil-mr-20">
-                                        <a href="contact.html">Cookie Policy</a>
+                                        <a href="#">Cookie Policy</a>
                                     </li>
                                 </ul>
                             </div>
@@ -1154,7 +1139,7 @@
                         <div class="mil-dots mil-up"></div>
                         <div class="mil-footer-bottom mil-aic mil-jcb mil-up">
                             <p>© Copyright 2025 - All Rights Reserved.</p>
-                            <p>Author: <a href="" target="_blank" data-no-swup="" class="mil-text-link mil-a-1">Dearie-de-cybek</a></p>
+                            <p>Built by: <a href="zoetech.io" target="_blank" data-no-swup="" class="mil-text-link mil-a-1">Zoe Tech</a></p>
                         </div>
                     </div>
                 </div>
