--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <!-- chome mobile panel color -->
     <meta name="theme-color" content="#EDCE29" />
     <!-- favicon -->
-    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
 
     <!-- bootstrap grid css -->
     <link rel="stylesheet" href="css/bootstrap-grid.css" />
@@ -29,7 +29,7 @@
       <!-- static content -->
       <div class="mil-preloader-frame">
         <div class="mil-preloader-content">
-          <img src="images/logo.png" alt="logo" />
+          <img src="images/proClean.png" alt="logo" />
           <div class="mil-preloader">
             <div class="mil-preload-line"></div>
           </div>
@@ -47,8 +47,8 @@
                 class="mil-logo mil-hover-bri-105"
                 style="width: 16rem"
               >
-                <img src="images/logo.png" alt="logo" />
-                <img src="images/logo-light.png" alt="logo" class="mil-light" />
+                <img src="images/proClean.png" alt="logo" />
+                <img src="images/proClean.png" alt="logo" class="mil-light" />
               </a>
             </div>
             <nav class="mil-main-menu">
@@ -230,7 +230,7 @@
                 <img src="images/discount.svg" alt="discount" />
                 <div class="mil-up-text mil-m-4">
                   <img
-                    src="images/logo-light.png"
+                    src="images/proClean.png"
                     alt="logo"
                     style="width: 11rem; height: auto; margin-left: -0.5rem"
                   />
@@ -380,14 +380,6 @@
                         href="contact.html"
                         class="mil-btn mil-icon-btn mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-hover-scale mil-mr-40"
                         >Order now<i class="far fa-plus mil-bg-m-4 mil-m-1"></i
-                      ></a>
-                      <a
-                        href="calculator.html"
-                        class="mil-link mil-m-1 mil-reverse"
-                        >Price Calculator<i
-                          class="far fa-calculator mil-bg-a-2 mil-m-4"
-                          style="padding: 0.2rem 0 0 0.2rem"
-                        ></i
                       ></a>
                     </div>
                   </div>
@@ -592,7 +584,7 @@
               <div class="col-lg-6 mil-mb-15 mil-up">
                 <div class="mil-map-frame">
                   <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d9791.07623995444!2d-73.55008160794402!3d45.52344279378965!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cc91ba5debafb97%3A0xccd54ebd07303f2c!2sPrison-des-Patriotes!5e0!3m2!1sen!2sua!4v1731163624623!5m2!1sen!2sua"
+                    src="https://maps.app.goo.gl/QVsFRSox7nEehVom9"
                     width="600"
                     height="450"
                     style="border: 0"
@@ -625,9 +617,8 @@
                   />
                   <h3 class="mil-fs-30 mil-mb-20 mil-lh-110">Write</h3>
                   <p class="mil-fs-18 mil-mb-5">
-                    Proclean and Green.mailbox@mail.com
+                    info@procleangreen.com.au
                   </p>
-                  <p class="mil-fs-18">Proclean and Green.ofice@mail.com</p>
                 </div>
                 <div class="col-lg-4 mil-tac mil-mb-60">
                   <img
@@ -636,8 +627,7 @@
                     class="mil-card-icon mil-mb-30"
                   />
                   <h3 class="mil-fs-30 mil-mb-20 mil-lh-110">Call</h3>
-                  <p class="mil-fs-18 mil-mb-5">+1 (049) 129-45X7</p>
-                  <p class="mil-fs-18">+1 (049) 128-45X7</p>
+                  <p class="mil-fs-18 mil-mb-5">+61 (405) 805-552</p>
                 </div>
                 <div class="col-lg-4 mil-tac mil-mb-60">
                   <img
@@ -647,7 +637,7 @@
                   />
                   <h3 class="mil-fs-30 mil-mb-20 mil-lh-110">Come</h3>
                   <p class="mil-fs-18 mil-lh-160">
-                    71 South Los Carneros Road, <br />Goleta, California 93117
+                    50 Pasanda Rd, <br />Munno Para West, SA 5115
                   </p>
                 </div>
               </div>
@@ -676,15 +666,6 @@
                       <h5 class="mil-fs-32 mil-m-1">
                         Highly skilled professionals are always at your service.
                       </h5>
-                    </div>
-                    <div class="col-lg-6 mil-jce mil-md-jcs mil-mb-30">
-                      <a
-                        href="calculator.html"
-                        class="mil-btn mil-icon-btn mil-bg-m-1 mil-m-4 mil-br-xl mil-hover-bri-105 mil-hover-scale"
-                        >Price calculator<i
-                          class="far fa-arrow-right mil-bg-a-1 mil-m-1"
-                        ></i
-                      ></a>
                     </div>
                   </div>
                 </div>
@@ -762,20 +743,13 @@
                     <h2
                       class="mil-sm-fs-44 mil-fs-72 mil-m-3 mil-lh-110 mil-mb-30"
                     >
-                      Cleaning subscription:
+                      ProClean and Green
                     </h2>
                     <p class="mil-fs-24 mil-mb-40">
                       Your home gleams brilliantly <br />
                       while you relax.
                     </p>
                     <div class="mil-buttons-frame">
-                      <a
-                        href="subscription.html"
-                        class="mil-btn mil-icon-btn mil-bg-a-1 mil-br-xl mil-hover-bri-105 mil-hover-scale mil-mr-30"
-                        >Subscribe now<i
-                          class="far fa-plus mil-bg-m-1 mil-a-1"
-                        ></i
-                      ></a>
                       <a href="subscription.html" class="mil-link mil-m-4"
                         >Learn more<i
                           class="far fa-arrow-right mil-bg-a-1 mil-m-1"
@@ -878,171 +852,83 @@
         <!-- footer -->
         <footer>
           <div class="mil-footer-bg">
-            <video
-              class="mil-footer-bg mil-scale-img"
-              data-value-1="1"
-              data-value-2="1.3"
-              autoplay="autoplay"
-              loop="loop"
-              muted=""
-              playsinline=""
-              oncontextmenu="return false;"
-              preload="auto"
-            >
-              <source src="media/footer.mp4" />
-            </video>
+              <video class="mil-footer-bg mil-scale-img" data-value-1="1" data-value-2="1.3" autoplay="autoplay" loop="loop" muted="" playsinline="" oncontextmenu="return false;" preload="auto">
+                  <source src="media/footer.mp4">
+              </video>
           </div>
           <div class="mil-footer-content">
-            <div class="container">
-              <div class="row mil-p-f-60">
-                <div class="col-lg-7 col-md-6 col-sm-12 mil-mb-60">
-                  <div class="row">
-                    <div class="col-8 col-md-6">
-                      <a
-                        href="#top"
-                        class="mil-logo mil-hover-bri-105 mil-mb-30 mil-up"
-                        style="width: 16rem"
-                      >
-                        <img
-                          src="images/proClean.png"
-                          alt="logo"
-                          class="mil-light"
-                        />
-                      </a>
-                    </div>
+              <div class="container">
+                  <div class="row mil-p-f-60">
+                      <div class="col-lg-7 col-md-6 col-sm-12 mil-mb-60">
+                          <div class="row">
+                              <div class="col-8 col-md-6">
+                                  <a href="#top" class="mil-logo mil-hover-bri-105 mil-mb-30 mil-up" style="width: 16rem">
+                                      <img src="images/proClean.png" alt="logo" class="mil-light">
+                                  </a>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="col-lg-5 col-md-6 col-sm-12 mil-mb-60">
+                          <div class="row">
+                              <div class="col-6">
+                                  <ul>
+                                      <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="index.html">Home</a></li>
+                                      <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="services.html">Services</a></li>
+                                      <li class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"><a href="contact.html">Contact</a></li>
+                                  </ul>
+                              </div>
+                              <div class="col-6">
+                                  <ul>
+                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Industrial Cleaning</a></li>
+                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Home</a></li>
+                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Office</a></li>
+                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Windows</a></li>
+                                      <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up"><a href="service.html">Gutter Cleaning</a></li>
+                                  </ul>
+                              </div>
+                          </div>
+                      </div>
                   </div>
-                </div>
-                <div class="col-lg-5 col-md-6 col-sm-12 mil-mb-60">
-                  <div class="row">
-                    <div class="col-6">
-                      <ul>
-                        <li
-                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
-                        >
-                          <a href="home-2.html">Home</a>
-                        </li>
-                        <li
-                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
-                        >
-                          <a href="services.html">Services</a>
-                        </li>
-                        <li
-                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
-                        >
-                          <a href="calculator.html">Calculate price</a>
-                        </li>
-                        <li
-                          class="mil-fs-24 mil-fw-600 mil-m-3 mil-hover-a-1 mil-mb-20 mil-up"
-                        >
-                          <a href="contact.html">Contact</a>
-                        </li>
-                      </ul>
-                    </div>
-                    <div class="col-6">
-                      <ul>
-                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
-                          <a href="service-1.html">Apartment</a>
-                        </li>
-                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
-                          <a href="service-2.html">Home</a>
-                        </li>
-                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
-                          <a href="service-1.html">Office</a>
-                        </li>
-                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
-                          <a href="service-2.html">Windows</a>
-                        </li>
-                        <li class="mil-up-text mil-hover-m-4 mil-mb-20 mil-up">
-                          <a href="service-1.html">Pool</a>
-                        </li>
-                      </ul>
-                    </div>
+                  <div class="mil-dots mil-up"></div>
+                  <div class="row mil-p-f-60 mil-sm-column-r">
+                      <div class="col-lg-7 col-md-6 col-sm-12 mil-column mil-jcb mil-mb-60">
+                          <ul class="mil-aic mil-mb-30 mil-up">
+                              <li class="mil-mr-20 mil-fs-20 mil-m-3">
+                                  <a href="#." target="_blank" data-no-swup="" class="mil-hover-a-1">
+                                      <i class="fab fa-instagram"></i>
+                                  </a>
+                              </li>
+                              <li class="mil-mr-20 mil-fs-20 mil-m-3">
+                                  <a href="#." target="_blank" data-no-swup="" class="mil-hover-a-1">
+                                      <i class="fab fa-facebook-f"></i>
+                                  </a>
+                              </li>
+                          </ul>
+                          <ul class="mil-aic mil-up">
+                              <li class="mil-hover-m-4 mil-mr-20">
+                                  <a href="#">Cookie Policy</a>
+                              </li>
+                          </ul>
+                      </div>
+                      <div class="col-lg-5 col-md-6 col-sm-12 mil-mb-60">
+                          <div class="row mil-jcb">
+                              <div class="col-6 mil-up">
+                                  <h5 class="mil-fs-22 mil-fw-600 mil-m-3 mil-mb-20">50 Pasanda Rd,</h5>
+                                  <p class="mil-mb-20">Munno Para West, <br>SA 5115</p>
+                                  <p class="mil-up-text mil-a-1">+61 (405) 805-552</p>
+                              </div>
+                          </div>
+                      </div>
                   </div>
-                </div>
-              </div>
-              <div class="mil-dots mil-up"></div>
-              <div class="row mil-p-f-60 mil-sm-column-r">
-                <div
-                  class="col-lg-7 col-md-6 col-sm-12 mil-column mil-jcb mil-mb-60"
-                >
-                  <ul class="mil-aic mil-mb-30 mil-up">
-                    <li class="mil-mr-20 mil-fs-20 mil-m-3">
-                      <a
-                        href="#."
-                        target="_blank"
-                        data-no-swup=""
-                        class="mil-hover-a-1"
-                      >
-                        <i class="fab fa-instagram"></i>
-                      </a>
-                    </li>
-                    <li class="mil-mr-20 mil-fs-20 mil-m-3">
-                      <a
-                        href="#."
-                        target="_blank"
-                        data-no-swup=""
-                        class="mil-hover-a-1"
-                      >
-                        <i class="fab fa-facebook-f"></i>
-                      </a>
-                    </li>
-                    <li class="mil-mr-20 mil-fs-20 mil-m-3">
-                      <a
-                        href="#."
-                        target="_blank"
-                        data-no-swup=""
-                        class="mil-hover-a-1"
-                      >
-                        <i class="fab fa-youtube"></i>
-                      </a>
-                    </li>
-                    <li class="mil-fs-20 mil-m-3">
-                      <a
-                        href="#."
-                        target="_blank"
-                        data-no-swup=""
-                        class="mil-hover-a-1"
-                      >
-                        <i class="fab fa-pinterest-p"></i>
-                      </a>
-                    </li>
-                  </ul>
-                  <ul class="mil-aic mil-up">
-                    <li class="mil-hover-m-4 mil-mr-20">
-                      <a href="contact.html">Cookie Policy</a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-5 col-md-6 col-sm-12 mil-mb-60">
-                  <div class="row mil-jcb">
-                    <div class="col-6 mil-up">
-                      <h5 class="mil-fs-22 mil-fw-600 mil-m-3 mil-mb-20">
-                        50 Pasanda Rd,
-                      </h5>
-                      <p class="mil-mb-20">Munno Para West, <br />SA 5115</p>
-                      <p class="mil-up-text mil-a-1">+61 (405) 805-552</p>
-                    </div>
+                  <div class="mil-dots mil-up"></div>
+                  <div class="mil-footer-bottom mil-aic mil-jcb mil-up">
+                      <p>© Copyright 2025 - All Rights Reserved.</p>
+                      <p>Built by: <a href="zoetech.io" target="_blank" data-no-swup="" class="mil-text-link mil-a-1">Zoe Tech</a></p>
                   </div>
-                </div>
               </div>
-              <div class="mil-dots mil-up"></div>
-              <div class="mil-footer-bottom mil-aic mil-jcb mil-up">
-                <p>© Copyright 2025 - All Rights Reserved.</p>
-                <p>
-                  Author:
-                  <a
-                    href=""
-                    target="_blank"
-                    data-no-swup=""
-                    class="mil-text-link mil-a-1"
-                    >Dearie-de-cybek</a
-                  >
-                </p>
-              </div>
-            </div>
           </div>
-        </footer>
-        <!-- footer end -->
+      </footer>
+      <!-- footer end -->
       </div>
       <!-- dynamic content end -->
     </div>
