--- a/contact.html
+++ b/contact.html
@@ -228,7 +228,8 @@
                   </p>
                   <button
                     class="mil-btn mil-bg-a-1 mil-icon-btn mil-br-xl mil-hover-bri-105 mil-hover-scale mil-ml-60 mil-sm-ml-30"
-                    type="submit" id="submit-btn"
+                    type="submit"
+                    id="submit-btn"
                   >
                     Get it now<i
                       class="far fa-arrow-right mil-bg-m-1 mil-a-1"
@@ -395,7 +396,12 @@
                       week
                     </h3>
                   </div>
-                  <form>
+                  <form
+                    id="contact-form"
+                    action="info@proclean-green.com.au"
+                    method="post"
+                    enctype="text/plain"
+                  >
                     <div class="row">
                       <div class="col-6 mil-mb-15">
                         <div class="mil-input-frame">
@@ -519,19 +525,6 @@
                       </div>
                     </div>
                   </form>
-                </div>
-              </div>
-              <div class="col-lg-6 mil-mb-15 mil-up">
-                <div class="mil-map-frame">
-                  <iframe
-                    src="https://maps.app.goo.gl/QVsFRSox7nEehVom9"
-                    width="600"
-                    height="450"
-                    style="border: 0"
-                    allowfullscreen=""
-                    loading="lazy"
-                    referrerpolicy="no-referrer-when-downgrade"
-                  ></iframe>
                 </div>
               </div>
             </div>
