--- a/service.html
+++ b/service.html
@@ -330,7 +330,7 @@
                 class="mil-column col-lg-5 mil-jcb mil-aie mil-sm-ais mil-mb-60"
               >
                 <ul class="mil-breadcrumbs mil-mb-60">
-                  <li><a href="home-1.html">Home</a></li>
+                  <li><a href="index.html">Home</a></li>
                   <li><a href="services.html">Services</a></li>
                 </ul>
                 <div class="mil-circle-text-position">
